--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
         <div class="col-md-6">
             <div class="logo-margin">Logo</div>
         </div>
-        <div class="col-md-6">Ad</div>
+        <div class="col-md-6">Ads</div>
     </div>
 </div>
 
